refactored FedoraId in attempt to make it slightly easier to understand